--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
 	<packaging>jar</packaging>
 	<version>1.0-SNAPSHOT</version>
 	<name>DSo6 Core Module</name>
-	<url>http://dso6.sf.net/</url>
+	<url>http://github.com/oster/dso6-core/</url>
 	<inceptionYear>2009</inceptionYear>
 	<licenses>
 		<license>
@@ -82,9 +82,8 @@
 		<url>http://www.inria.fr/</url>
 	</organization>
 	<scm>
-		<connection>scm:svn:http://dso6.svn.sourceforge.net/svnroot/dso6/trunk</connection>
-		<developerConnection>scm:svn:https://dso6.svn.sourceforge.net/svnroot/dso6/trunk</developerConnection>
-		<url>http://dso6.svn.sourceforge.net/viewvc/dso6/</url>
+		<connection>scm:git:https://github.com/oster/dso6-core.git</connection>
+		<url>http://github.com/oster/dso6-core/</url>
 	</scm>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
