--- a/pom.xml
+++ b/pom.xml
@@ -27,15 +27,18 @@
 	<packaging>jar</packaging>
 	<version>1.0-SNAPSHOT</version>
 	<name>DSo6 Core Module</name>
-	<url>http://dso6.sf.net/</url>
-	<inceptionYear>2009</inceptionYear>
+	<url>https://github.com/oster/dso6-core/</url>
 	<licenses>
 		<license>
-			<name>LGPL 2.1</name>
-			<url>http://www.gnu.org/licenses/old-licenses/lgpl-2.1.html</url>
+			<name>LGPL 2.1 (GNU Lesser General Public License)</name>
+			<url>http://www.gnu.org/licenses/old-licenses/lgpl-2.1.txt</url>
 			<distribution>repo</distribution>
 		</license>
 	</licenses>
+	<organization>
+		<name>INRIA / LORIA / SCORE Team</name>
+		<url>http://score.loria.fr/</url>
+	</organization>
 	<developers>
 		<developer>
 			<id>oster</id>
@@ -62,36 +65,19 @@
 			</roles>
 			<timezone>+1</timezone>
 		</developer>
-		<developer>
-			<id>molli</id>
-			<name>Pascal Molli</name>
-			<email>molli@loria.fr</email>
-			<url>http://www.loria.fr/~molli/</url>
-			<organization>Nancy-Université</organization>
-			<organizationUrl>http://www.loria.fr/</organizationUrl>
-			<roles>
-				<role>architect</role>
-				<role>developer</role>
-			</roles>
-			<timezone>+1</timezone>
-		</developer>
 	</developers>
 	<contributors/>
-	<organization>
-		<name>INRIA</name>
-		<url>http://www.inria.fr/</url>
-	</organization>
 	<scm>
-		<connection>scm:svn:http://dso6.svn.sourceforge.net/svnroot/dso6/trunk</connection>
-		<developerConnection>scm:svn:https://dso6.svn.sourceforge.net/svnroot/dso6/trunk</developerConnection>
-		<url>http://dso6.svn.sourceforge.net/viewvc/dso6/</url>
+		<connection>scm:git:https://github.com/oster/dso6-core.git</connection>
+		<url>https://github.com/oster/dso6-core/</url>
 	</scm>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	   <skipTests>true</skipTests>
 	</properties>
 	<repositories>
 	</repositories>
-	
+			
   	<build>
     	<plugins>
 			<plugin>
@@ -105,8 +91,10 @@
       		<plugin>
         		<groupId>org.apache.maven.plugins</groupId>
         		<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.7.2</version>
         		<configuration>
           			<testFailureIgnore>true</testFailureIgnore>
+					<skipTests>${skipTests}</skipTests>
         		</configuration>
       		</plugin>
 		 	<plugin>
@@ -141,6 +129,93 @@
     	</plugins>
   	</build>
 	
+	<reporting>
+		<plugins>
+			<plugin> 
+				<groupId>org.apache.maven.plugins</groupId> 
+				<artifactId>maven-project-info-reports-plugin</artifactId> 
+				<version>2.1.1</version> 
+				<reportSets> 
+					<reportSet> 
+						<reports> 
+							<report>index</report> 
+							<!--<report>changelog</report>-->
+							<report>file-activity</report> 
+							<report>dev-activity</report> 
+							<!--<report>dependencies</report>--> 
+							<report>project-team</report> 
+							<report>license</report> 
+							<report>scm</report> 
+						</reports> 
+					</reportSet> 
+				</reportSets> 
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<version>2.6.1</version> 
+				<reportSets> 
+					<reportSet> 
+						<id>html</id> 
+						<configuration> 
+							<show>private</show> 
+						</configuration> 
+						<reports> 
+							<report>javadoc</report> 
+						</reports> 
+					</reportSet> 
+				</reportSets>
+			</plugin>
+			<!--
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-changelog-plugin</artifactId>
+				<version>2.1</version>
+			</plugin>
+			-->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-pmd-plugin</artifactId>
+				<version>2.4</version>
+				<configuration> 
+					<targetJdk>1.6</targetJdk> 
+				</configuration>				
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.7.2</version>
+			</plugin>
+			<!--
+			<plugin> 
+				<groupId>org.codehaus.mojo</groupId> 
+				<artifactId>findbugs-maven-plugin</artifactId> 
+				<version>2.0.1</version> 
+				<configuration> 
+					<threshold>Normal</threshold> 
+					<effort>Min</effort> 
+				</configuration> 
+			</plugin>
+			-->			
+			<plugin> 
+				<groupId>org.codehaus.mojo</groupId> 
+				<artifactId>cobertura-maven-plugin</artifactId> 
+				<version>2.3</version> 
+				<configuration> 
+					<instrumentation> 
+						<ignores> 
+							<ignore>com.sun.*</ignore> 
+						</ignores> 
+					</instrumentation> 
+					<formats> 
+						<format>html</format> 
+						<format>xml</format> 
+					</formats> 
+				</configuration> 
+			</plugin>			
+		</plugins>
+	</reporting>
+	
 	<dependencies>
 		<dependency>
 			<groupId>fr.loria.ecoo</groupId>
@@ -155,7 +230,7 @@
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>4.5</version>
+			<version>4.8.2</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
