--- a/pom.xml
+++ b/pom.xml
@@ -66,40 +66,56 @@
 			<timezone>+1</timezone>
 		</developer>
 	</developers>
-	<contributors/>
+	<contributors>
+		<contributor>
+			<name>Clara Wiatrowski</name>
+			<email>clara.wiatrowski@esial.uhp-nancy.fr</email>
+			<roles>
+				<role>developper</role>
+			</roles>
+		</contributor>
+		<contributor>
+			<name>Sébastien Parisot</name>
+			<email>sebastien.parisot@esial.uhp-nancy.fr</email>
+			<roles>
+				<role>developper</role>
+			</roles>
+		</contributor>
+	</contributors>
 	<scm>
 		<connection>scm:git:https://github.com/oster/dso6-core.git</connection>
 		<url>https://github.com/oster/dso6-core/</url>
 	</scm>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-	   <skipTests>true</skipTests>
+		<skipTests>true</skipTests>
 	</properties>
 	<repositories>
 	</repositories>
-			
-  	<build>
-    	<plugins>
+	<build>
+		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
-			   	<artifactId>maven-compiler-plugin</artifactId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>2.3.2</version>
 				<configuration>
 					<source>1.6</source>
 					<target>1.6</target>
 				</configuration>
-				</plugin>
-      		<plugin>
-        		<groupId>org.apache.maven.plugins</groupId>
-        		<artifactId>maven-surefire-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
 				<version>2.7.2</version>
-        		<configuration>
-          			<testFailureIgnore>true</testFailureIgnore>
+				<configuration>
+					<testFailureIgnore>true</testFailureIgnore>
 					<skipTests>${skipTests}</skipTests>
-        		</configuration>
-      		</plugin>
-		 	<plugin>
+				</configuration>
+			</plugin>
+			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jar-plugin</artifactId>
+				<version>2.3.1</version>
 				<executions>
 					<execution>
 						<goals>
@@ -113,7 +129,7 @@
 					<storepass>tagada</storepass>
 					<signedjar>${project.build.directory}/signed/${project.build.finalName}.jar</signedjar>
 					<verify>true</verify>
-<!--
+					<!--
 		        	<archive>
 		          		<manifest>
 		            		<mainClass>org.libresource.so6.ui.CommitMain</mainClass>
@@ -124,98 +140,95 @@
 		            		<url>${pom.url}</url>
 		          		</manifestEntries>
 		        	</archive>
--->		    	</configuration>
+-->
+				</configuration>
 			</plugin>
-    	</plugins>
-  	</build>
-	
-	<reporting>
-		<plugins>
-			<plugin> 
-				<groupId>org.apache.maven.plugins</groupId> 
-				<artifactId>maven-project-info-reports-plugin</artifactId> 
-				<version>2.1.1</version> 
-				<reportSets> 
-					<reportSet> 
-						<reports> 
-							<report>index</report> 
-							<!--<report>changelog</report>-->
-							<report>file-activity</report> 
-							<report>dev-activity</report> 
-							<!--<report>dependencies</report>--> 
-							<report>project-team</report> 
-							<report>license</report> 
-							<report>scm</report> 
-						</reports> 
-					</reportSet> 
-				</reportSets> 
-			</plugin>
+			<!-- Maven3 specific configuration -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-javadoc-plugin</artifactId>
-				<version>2.6.1</version> 
-				<reportSets> 
-					<reportSet> 
-						<id>html</id> 
-						<configuration> 
-							<show>private</show> 
-						</configuration> 
-						<reports> 
-							<report>javadoc</report> 
-						</reports> 
-					</reportSet> 
-				</reportSets>
+				<artifactId>maven-site-plugin</artifactId>
+				<version>3.0-beta-3</version>
+				<configuration>
+					<reportPlugins>
+						<plugin>
+							<groupId>org.apache.maven.plugins</groupId>
+							<artifactId>maven-project-info-reports-plugin</artifactId>
+							<version>2.2</version>
+							<!-- 2.1.1 -->
+							<reportSets>
+								<reportSet>
+									<reports>
+										<report>index</report>
+										<!--<report>changelog</report>-->
+										<!--<report>dependencies</report>-->
+										<report>project-team</report>
+										<report>license</report>
+										<report>scm</report>
+									</reports>
+								</reportSet>
+							</reportSets>
+						</plugin>
+						<plugin>
+							<groupId>org.apache.maven.plugins</groupId>
+							<artifactId>maven-javadoc-plugin</artifactId>
+							<version>2.7</version>
+							<reportSets>
+								<reportSet>
+									<id>html</id>
+									<configuration>
+										<show>private</show>
+									</configuration>
+									<reports>
+										<report>javadoc</report>
+									</reports>
+								</reportSet>
+							</reportSets>
+						</plugin>
+						<plugin>
+							<groupId>org.apache.maven.plugins</groupId>
+							<artifactId>maven-jxr-plugin</artifactId>
+							<version>2.1</version>
+							<configuration>
+								<aggregate>true</aggregate>
+							</configuration>
+						</plugin>
+						<plugin>
+							<groupId>org.apache.maven.plugins</groupId>
+							<artifactId>maven-surefire-report-plugin</artifactId>
+							<version>2.6</version>
+						</plugin>
+						<plugin>
+							<groupId>org.codehaus.mojo</groupId>
+							<artifactId>cobertura-maven-plugin</artifactId>
+							<version>2.4</version>
+							<configuration>
+								<formats>
+									<format>xml</format>
+									<format>html</format>
+								</formats>
+							</configuration>
+						</plugin>
+						<plugin>
+							<groupId>org.apache.maven.plugins</groupId>
+							<artifactId>maven-pmd-plugin</artifactId>
+							<version>2.4</version>
+							<configuration>
+								<targetJdk>1.6</targetJdk>
+							</configuration>
+						</plugin>
+						<!--
+       <plugin>
+         <groupId>org.apache.maven.plugins</groupId>
+         <artifactId>maven-checkstyle-plugin</artifactId>
+         <version>2.6</version>
+       </plugin>
+-->
+					</reportPlugins>
+				</configuration>
 			</plugin>
-			<!--
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-changelog-plugin</artifactId>
-				<version>2.1</version>
-			</plugin>
-			-->
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-pmd-plugin</artifactId>
-				<version>2.4</version>
-				<configuration> 
-					<targetJdk>1.6</targetJdk> 
-				</configuration>				
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.7.2</version>
-			</plugin>
-			<!--
-			<plugin> 
-				<groupId>org.codehaus.mojo</groupId> 
-				<artifactId>findbugs-maven-plugin</artifactId> 
-				<version>2.0.1</version> 
-				<configuration> 
-					<threshold>Normal</threshold> 
-					<effort>Min</effort> 
-				</configuration> 
-			</plugin>
-			-->			
-			<plugin> 
-				<groupId>org.codehaus.mojo</groupId> 
-				<artifactId>cobertura-maven-plugin</artifactId> 
-				<version>2.3</version> 
-				<configuration> 
-					<instrumentation> 
-						<ignores> 
-							<ignore>com.sun.*</ignore> 
-						</ignores> 
-					</instrumentation> 
-					<formats> 
-						<format>html</format> 
-						<format>xml</format> 
-					</formats> 
-				</configuration> 
-			</plugin>			
+			<!-- end of Maven3 specific configuration -->
 		</plugins>
-	</reporting>
-	
+	</build>
 	<dependencies>
 		<dependency>
 			<groupId>fr.loria.ecoo</groupId>
@@ -226,7 +239,7 @@
 			<groupId>fr.loria.ecoo</groupId>
 			<artifactId>jxydiff</artifactId>
 			<version>1.0</version>
-		</dependency>		
+		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
